--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "v-charts": "^1.19.0",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
-        "vuex": "^3.1.3"
+        "vuex": "^3.1.3",
+        "file-saver": "2.0.1",
+        "xlsx": "0.14.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
@@ -57,6 +59,7 @@
         "postcss-loader": "^2.0.8",
         "postcss-url": "^7.2.1",
         "rimraf": "^2.6.0",
+        "script-loader": "0.7.2",
         "sass-loader": "^7.3.1",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
